# sdlc-test-agent

./: .gitignore  README.md  pyproject.toml  sdlc-test-agent.pyproj  sdlc-test-agent.sln
.github/workflows/: ci.yml
examples/: input.project_read.deny_cross_project.json  input.project_read.json
sdlc_test_agent/: __init__.py  agent.py  authorization.py  cli.py
tests/: test_agent.py  test_authorization.py  test_integration_opa.py
