[project]
name = "sdlc-test-agent"
version = "0.1.0"
description = "Operational agent implementing agent_role == \"test\" from the agentic-sdlc-reference-architecture."
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sdlc_test_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
